--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap");
 body {
   margin: 0;
   padding: 0;
@@ -6,7 +7,8 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  background: #e4e4e4;
+  background: #cccccc;
+  font-family: "Plus Jakarta Sans", sans-serif;
 }
 
 .backVid {
@@ -25,8 +27,8 @@ body {
 }
 
 .testVideo .findVid {
-  -webkit-transform: scale(1);
-          transform: scale(1);
+  -webkit-transform: scale(1) translateY(10px);
+          transform: scale(1) translateY(10px);
   opacity: 100%;
   -webkit-transition: 1s;
   transition: 1s;
@@ -34,8 +36,8 @@ body {
 
 .findVid {
   width: 90%;
-  -webkit-transform: scale(1.5);
-          transform: scale(1.5);
+  -webkit-transform: scale(2);
+          transform: scale(2);
   opacity: 0%;
   -webkit-transition: 1s;
   transition: 1s;
@@ -59,6 +61,7 @@ body {
           align-items: center;
 }
 .content .intContent {
+  margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -69,10 +72,27 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  height: 98.5%;
-  width: 100%;
+  height: 97%;
+  width: 98.5%;
 }
-.content .intContent .headerContent {
+.content .intContent > :nth-child(1) {
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #000000;
+  border-radius: 30px;
+  width: 100%;
+  max-width: 3000px;
+}
+.content .intContent > :nth-child(1) .headerContent {
   margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -87,36 +107,12 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  background: black;
+  background: #000000;
   border-radius: 30px;
-  padding: 5px 5px;
-  width: 98%;
-  max-width: 3000px;
+  width: 100%;
+  padding: 5px;
 }
-.content .intContent .headerContent > :nth-child(1) {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
-}
-.content .intContent .headerContent > :nth-child(1) > div {
-  color: white;
-  height: 100%;
-  padding: 10px 27.5px;
-  background: black;
-  border: 1px solid white;
-  border-radius: 30px;
-  cursor: pointer;
-}
-.content .intContent .headerContent > :nth-child(1) > :nth-child(1) {
-  color: rgb(0, 0, 0);
-  background: rgb(255, 255, 255);
-  border: 1px solid rgb(0, 0, 0);
-}
-.content .intContent .headerContent > :nth-child(2) {
+.content .intContent > :nth-child(1) .headerContent > div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -127,45 +123,114 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  border-radius: 30px;
 }
-.content .intContent .headerContent > :nth-child(2) div {
+.content .intContent > :nth-child(1) .headerContent > div > div {
   height: 100%;
   cursor: pointer;
-}
-.content .intContent .headerContent > :nth-child(2) > :nth-child(1) {
-  color: white;
-  background: black;
-  border: 1px solid white;
+  padding: 8px 22.5px;
+  font-size: 14px;
+  border: 1px solid #e1e1e1;
   border-radius: 30px;
-  padding: 10px 27.5px;
+  color: #e1e1e1;
+  text-align: center;
+}
+.content .intContent > :nth-child(1) .headerContent > :nth-child(1) > :nth-child(1) {
+  background-color: white;
+  border-color: white;
+  color: #000000;
+}
+.content .intContent > :nth-child(1) .headerContent > :nth-child(1) > :nth-child(2):hover, .content .intContent > :nth-child(1) .headerContent > :nth-child(1) > :nth-child(3):hover, .content .intContent > :nth-child(1) .headerContent > :nth-child(1) > :nth-child(4):hover {
+  background: #2c2c2c;
+}
+.content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(1) {
   display: none;
 }
-.content .intContent .headerContent > :nth-child(2) > :nth-child(2), .content .intContent .headerContent > :nth-child(2) > :nth-child(3) {
-  background: black;
-  border: 1px solid black;
+.content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(1):hover {
+  background: #2c2c2c;
+}
+.content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(2), .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(3) {
+  padding: 0;
+  padding: 3px;
   border-radius: 50%;
+  display: -ms-grid;
+  display: grid;
+  place-content: center;
+}
+.content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(2) div, .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(3) div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   place-content: center;
-  padding: 10px;
-  border: 1px solid white;
-}
-.content .intContent .headerContent > :nth-child(2) > :nth-child(2) div, .content .intContent .headerContent > :nth-child(2) > :nth-child(3) div {
   width: 100%;
-  max-width: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  place-content: center;
+  max-width: 15px;
+  padding: 5px;
 }
-.content .intContent .headerContent > :nth-child(2) > :nth-child(2) div img, .content .intContent .headerContent > :nth-child(2) > :nth-child(3) div img {
+.content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(2) div img, .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(3) div img {
   width: 100%;
 }
-.content .intContent .headerContent > :nth-child(2) > :nth-child(4) {
-  color: white;
-  background: black;
-  border: 1px solid white;
-  border-radius: 30px;
-  padding: 10px 27.5px;
+.content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(4) {
+  background-color: #2c2c2c;
+}
+
+@media (max-width: 800px) {
+  .content .intContent > :nth-child(1) .headerContent {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .content .intContent > :nth-child(1) .headerContent > div > div {
+    padding: 8px 22.5px;
+    font-size: 14px;
+  }
+  .content .intContent > :nth-child(1) .headerContent > :nth-child(1) > :nth-child(2), .content .intContent > :nth-child(1) .headerContent > :nth-child(1) > :nth-child(3) {
+    display: none;
+  }
+  .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(1) {
+    display: none;
+  }
+  .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(2), .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(3) {
+    padding: 3px;
+  }
+  .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(2) div, .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(3) div {
+    max-width: 15px;
+    padding: 5px;
+  }
+}
+@media (max-width: 500px) {
+  .content .intContent > :nth-child(1) .headerContent {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .content .intContent > :nth-child(1) .headerContent > div {
+    width: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .content .intContent > :nth-child(1) .headerContent > div > div {
+    width: 100%;
+    padding: 8px;
+    font-size: 14px;
+  }
+  .content .intContent > :nth-child(1) .headerContent > :nth-child(1) > :nth-child(2), .content .intContent > :nth-child(1) .headerContent > :nth-child(1) > :nth-child(3), .content .intContent > :nth-child(1) .headerContent > :nth-child(1) > :nth-child(4) {
+    display: none;
+  }
+  .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(1) {
+    display: block;
+  }
+  .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(2), .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(3), .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(4) {
+    display: none;
+  }
 }
