--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -9,6 +9,7 @@ body {
   left: 0;
   background: #cccccc;
   font-family: "Plus Jakarta Sans", sans-serif;
+  overflow: hidden;
 }
 
 .backVid {
@@ -25,22 +26,165 @@ body {
   z-index: 0;
   overflow: hidden;
 }
-
-.testVideo .findVid {
-  -webkit-transform: scale(1) translateY(10px);
-          transform: scale(1) translateY(10px);
-  opacity: 100%;
+.backVid .findVid {
+  width: 90%;
+  -webkit-transform: scale(2) translateY(10px);
+          transform: scale(2) translateY(10px);
+  opacity: 0%;
   -webkit-transition: 1s;
   transition: 1s;
 }
 
-.findVid {
-  width: 90%;
-  -webkit-transform: scale(2);
-          transform: scale(2);
+.animationVideo1 .findVid {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  opacity: 100%;
+  -webkit-transition-delay: 500ms;
+          transition-delay: 500ms;
+}
+
+.animationVideo2 .findVid {
+  -webkit-transform: scale(0.2);
+          transform: scale(0.2);
   opacity: 0%;
-  -webkit-transition: 1s;
-  transition: 1s;
+}
+
+.overlayMenu {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  left: 0;
+  z-index: 100;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: hidden;
+  opacity: 0;
+  visibility: hidden;
+  background: #cccccc;
+}
+.overlayMenu > :nth-child(1) {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  place-content: center;
+  z-index: 0;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 101;
+}
+.overlayMenu > :nth-child(1) > :nth-child(1) {
+  width: 90%;
+  -webkit-transform: scale(0.25);
+          transform: scale(0.25);
+  opacity: 0%;
+  -webkit-transition: 1.5s;
+  transition: 1.5s;
+}
+.overlayMenu > :nth-child(2) {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  gap: 2.5rem;
+  z-index: 102;
+}
+.overlayMenu > :nth-child(2) > :nth-child(2) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  place-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 100%;
+  width: 100%;
+  gap: 2.5rem;
+}
+.overlayMenu > :nth-child(2) > :nth-child(2) > div {
+  -webkit-transform: scale(0.5) translateY(-45px);
+          transform: scale(0.5) translateY(-45px);
+  opacity: 0%;
+}
+.overlayMenu > :nth-child(2) > :nth-child(2) > div a {
+  all: unset;
+  cursor: pointer;
+  font-weight: 500;
+}
+.overlayMenu > :nth-child(2) > :nth-child(2) > div a:hover {
+  text-decoration: underline;
+  text-underline-offset: 0.2rem;
+}
+.overlayMenu > :nth-child(2) .menuClose {
+  position: absolute;
+  right: 1%;
+  top: 3%;
+}
+.overlayMenu > :nth-child(2) .menuClose > div {
+  width: 100%;
+  max-width: 25px;
+  cursor: pointer;
+}
+.overlayMenu > :nth-child(2) .menuClose > div img {
+  width: 100%;
+}
+
+.overlayMenuOpen {
+  visibility: visible;
+  opacity: 1;
+}
+.overlayMenuOpen > :nth-child(1) > :nth-child(1) {
+  width: 90%;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  opacity: 100%;
+  -webkit-transition: 1.5s;
+  transition: 1.5s;
+  -webkit-transition-delay: 500ms;
+          transition-delay: 500ms;
+}
+.overlayMenuOpen > :nth-child(2) > :nth-child(2) > div {
+  background: transparent;
+  -webkit-transform: scale(1) translateY(0px);
+          transform: scale(1) translateY(0px);
+  opacity: 100%;
+}
+.overlayMenuOpen > :nth-child(2) > :nth-child(2) > :nth-child(1) {
+  -webkit-transition-delay: 1s;
+          transition-delay: 1s;
+}
+.overlayMenuOpen > :nth-child(2) > :nth-child(2) > :nth-child(2) {
+  -webkit-transition-delay: 1.1s;
+          transition-delay: 1.1s;
+}
+.overlayMenuOpen > :nth-child(2) > :nth-child(2) > :nth-child(3) {
+  -webkit-transition-delay: 1.2s;
+          transition-delay: 1.2s;
+}
+.overlayMenuOpen > :nth-child(2) > :nth-child(2) > :nth-child(4) {
+  -webkit-transition-delay: 1.3s;
+          transition-delay: 1.3s;
+}
+.overlayMenuOpen > :nth-child(2) > :nth-child(2) > :nth-child(5) {
+  -webkit-transition-delay: 1.4s;
+          transition-delay: 1.4s;
+}
+.overlayMenuOpen > :nth-child(2) > :nth-child(2) > :nth-child(6) {
+  -webkit-transition-delay: 1.5s;
+          transition-delay: 1.5s;
 }
 
 .content {
@@ -75,6 +219,7 @@ body {
   height: 97%;
   width: 98.5%;
 }
+
 .content .intContent > :nth-child(1) {
   margin: 0 auto;
   display: -webkit-box;
@@ -91,6 +236,11 @@ body {
   border-radius: 30px;
   width: 100%;
   max-width: 3000px;
+  -webkit-transform: translateY(-15px);
+          transform: translateY(-15px);
+  opacity: 0%;
+  -webkit-transition: 1s;
+  transition: 1s;
 }
 .content .intContent > :nth-child(1) .headerContent {
   margin: 0 auto;
@@ -107,7 +257,6 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  background: #000000;
   border-radius: 30px;
   width: 100%;
   padding: 5px;
@@ -143,13 +292,7 @@ body {
 .content .intContent > :nth-child(1) .headerContent > :nth-child(1) > :nth-child(2):hover, .content .intContent > :nth-child(1) .headerContent > :nth-child(1) > :nth-child(3):hover, .content .intContent > :nth-child(1) .headerContent > :nth-child(1) > :nth-child(4):hover {
   background: #2c2c2c;
 }
-.content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(1) {
-  display: none;
-}
-.content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(1):hover {
-  background: #2c2c2c;
-}
-.content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(2), .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(3) {
+.content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(1), .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(2) {
   padding: 0;
   padding: 3px;
   border-radius: 50%;
@@ -157,7 +300,7 @@ body {
   display: grid;
   place-content: center;
 }
-.content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(2) div, .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(3) div {
+.content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(1) a, .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(2) a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -166,11 +309,18 @@ body {
   max-width: 15px;
   padding: 5px;
 }
-.content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(2) div img, .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(3) div img {
+.content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(1) a img, .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(2) a img {
   width: 100%;
 }
-.content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(4) {
+.content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(3) {
   background-color: #2c2c2c;
+}
+.content .intContent .navBarAnimation {
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
+  opacity: 100%;
+  -webkit-transition: 1s;
+  transition: 1s;
 }
 
 @media (max-width: 800px) {
@@ -186,13 +336,10 @@ body {
   .content .intContent > :nth-child(1) .headerContent > :nth-child(1) > :nth-child(2), .content .intContent > :nth-child(1) .headerContent > :nth-child(1) > :nth-child(3) {
     display: none;
   }
-  .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(1) {
-    display: none;
-  }
-  .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(2), .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(3) {
+  .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(1), .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(2) {
     padding: 3px;
   }
-  .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(2) div, .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(3) div {
+  .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(1) div, .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(2) div {
     max-width: 15px;
     padding: 5px;
   }
@@ -204,14 +351,14 @@ body {
             justify-content: space-between;
   }
   .content .intContent > :nth-child(1) .headerContent > div {
-    width: 50%;
+    width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-        -ms-flex-flow: row wrap;
-            flex-flow: row wrap;
+        -ms-flex-flow: row nowrap;
+            flex-flow: row nowrap;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -220,17 +367,187 @@ body {
             justify-content: center;
   }
   .content .intContent > :nth-child(1) .headerContent > div > div {
-    width: 100%;
+    width: 500%;
     padding: 8px;
-    font-size: 14px;
   }
-  .content .intContent > :nth-child(1) .headerContent > :nth-child(1) > :nth-child(2), .content .intContent > :nth-child(1) .headerContent > :nth-child(1) > :nth-child(3), .content .intContent > :nth-child(1) .headerContent > :nth-child(1) > :nth-child(4) {
+  .content .intContent > :nth-child(1) .headerContent > :nth-child(2) {
     display: none;
   }
-  .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(1) {
-    display: block;
+}
+.content .intContent main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
+  gap: 1rem;
+}
+.content .intContent main section {
+  width: 99.8%;
+  border-radius: 25px;
+  margin: 0 auto;
+  max-width: 3000px;
+  -webkit-backdrop-filter: blur(8px);
+          backdrop-filter: blur(8px);
+  cursor: pointer;
+  position: relative;
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(7, 35, 80, 0.5)), to(rgba(203, 203, 203, 0.5)));
+  background-image: linear-gradient(to right, rgba(7, 35, 80, 0.5), rgba(203, 203, 203, 0.5));
+  z-index: 1;
+}
+.content .intContent main section > :nth-child(1) {
+  margin: 0 auto;
+  width: 95%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  align-items: center;
+  padding: 15px 0px;
+}
+.content .intContent main section > :nth-child(1) h2 {
+  all: unset;
+}
+.content .intContent main section > :nth-child(1) > :nth-child(1) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 1.25rem;
+}
+.content .intContent main section > :nth-child(1) > :nth-child(1) > :nth-child(1) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+}
+.content .intContent main section > :nth-child(1) > :nth-child(1) > :nth-child(1) .circle {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  position: relative;
+  overflow: hidden;
+}
+.content .intContent main section > :nth-child(1) > :nth-child(1) > :nth-child(1) .circle::before {
+  content: "";
+  position: absolute;
+  top: -1px;
+  right: -1px;
+  bottom: -1px;
+  width: 50%;
+  border: 5px solid rgba(255, 255, 255, 0.1);
+  background: rgba(255, 255, 255, 0.8);
+  -webkit-filter: blur(10px);
+          filter: blur(10px);
+  z-index: -1;
+}
+.content .intContent main section > :nth-child(1) > :nth-child(1) > :nth-child(1) .cr2 {
+  margin-left: -20px;
+}
+.content .intContent main section > :nth-child(1) > :nth-child(1) > :nth-child(2) h2 {
+  letter-spacing: 0.75rem;
+  font-weight: 600;
+  font-size: 1.95rem;
+  color: #e1e1e1;
+}
+.content .intContent main section > :nth-child(1) > :nth-child(2) > :nth-child(1) {
+  width: 100%;
+  max-width: 17.5px;
+  background: white;
+  border-radius: 50%;
+  padding: 2.5px;
+  display: -ms-grid;
+  display: grid;
+  place-content: center;
+  cursor: pointer;
+}
+.content .intContent main section > :nth-child(1) > :nth-child(2) > :nth-child(1) img {
+  width: 100%;
+}
+.content .intContent main section::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(7, 35, 80, 0.8)), to(rgba(203, 203, 203, 0.8)));
+  background-image: linear-gradient(to right, rgba(7, 35, 80, 0.8), rgba(203, 203, 203, 0.8));
+  border-radius: 20px;
+  -webkit-backdrop-filter: blur(8px);
+          backdrop-filter: blur(8px);
+  z-index: -1;
+  -webkit-transition: opacity 0.5s linear;
+  transition: opacity 0.5s linear;
+  opacity: 0;
+}
+.content .intContent main section:hover::before {
+  opacity: 0.8;
+}
+
+@media (max-width: 800px) {
+  .content .intContent main section > :nth-child(1) > :nth-child(1) > :nth-child(1) .circle {
+    width: 28px;
+    height: 28px;
   }
-  .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(2), .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(3), .content .intContent > :nth-child(1) .headerContent > :nth-child(2) > :nth-child(4) {
-    display: none;
+  .content .intContent main section > :nth-child(1) > :nth-child(1) > :nth-child(1) .cr2 {
+    margin-left: -16px;
+  }
+  .content .intContent main section > :nth-child(1) > :nth-child(1) > :nth-child(2) h2 {
+    letter-spacing: 0.55rem;
+    font-size: 1.45rem;
+  }
+  .content .intContent main section > :nth-child(1) > :nth-child(2) > :nth-child(1) {
+    max-width: 17.5px;
+    padding: 2.5px;
+  }
+}
+@media (max-width: 500px) {
+  .content .intContent main section > :nth-child(1) {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row nowrap;
+            flex-flow: row nowrap;
+  }
+  .content .intContent main section > :nth-child(1) > :nth-child(1) > :nth-child(1) .circle {
+    width: 22.5px;
+    height: 22.5px;
+  }
+  .content .intContent main section > :nth-child(1) > :nth-child(1) > :nth-child(1) .cr2 {
+    margin-left: -13px;
+  }
+  .content .intContent main section > :nth-child(1) > :nth-child(1) > :nth-child(2) {
+    width: 25%;
+  }
+  .content .intContent main section > :nth-child(1) > :nth-child(1) > :nth-child(2) h2 {
+    letter-spacing: 0.45rem;
+    font-size: 1.25rem;
+  }
+  .content .intContent main section > :nth-child(1) > :nth-child(2) > :nth-child(1) {
+    max-width: 17.5px;
+    padding: 2.5px;
   }
 }
