--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -8,7 +8,6 @@ $azulOscuro : #072350;
 $casiBlanco : #e1e1e1;
 $gris : #2c2c2c;
 
-
 body{
     margin: 0;
     padding: 0;
@@ -19,6 +18,7 @@ body{
     left: 0;
     background: #cccccc;
     font-family: "Plus Jakarta Sans", sans-serif;
+    overflow: hidden;
 }
 
 .backVid{
@@ -32,19 +32,145 @@ body{
     place-content: center;
     z-index: 0;
     overflow: hidden;
+    .findVid{
+        width: 90%;
+        transform: scale(2) translateY(10px);
+        opacity: 0%;
+        transition: 1s;
+    }
 }
 
-.testVideo .findVid{
-    transform: scale(1) translateY(10px);
-    opacity: 100%;
-    transition: 1s;
+.animationVideo1{
+    .findVid{
+        transform: scale(1);
+        opacity: 100%;
+        transition-delay: 500ms;
+    } 
 }
 
-.findVid{
-    width: 90%;
-    transform: scale(2);
-    opacity: 0%;
-    transition: 1s;
+.animationVideo2{
+    .findVid{
+        transform: scale(.2);
+        opacity: 0%;
+    }
+}
+
+.overlayMenu{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    bottom: 0;
+    left: 0;
+    z-index: 100;
+    display: flex;
+    overflow: hidden;
+    opacity: 0;
+    visibility: hidden;
+    background: #cccccc;
+    >:nth-child(1){
+        position: absolute;
+        display: flex;
+        place-content: center;
+        z-index: 0;
+        overflow: hidden;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        z-index: 101;
+        >:nth-child(1){
+            width: 90%;
+            transform: scale(.25);
+            opacity: 0%;
+            transition: 1.5s;
+        }
+    }
+    >:nth-child(2){
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        gap: 2.5rem;
+        z-index: 102;
+        >:nth-child(2){
+            display: flex;
+            flex-flow: column wrap;
+            align-items: center;
+            place-content: center;
+            justify-content: center;
+            height: 100%;
+            width: 100%;
+            gap: 2.5rem;
+            >div{
+                transform: scale(.5) translateY(-45px);
+                opacity: 0%;
+                a{
+                    all: unset;
+                    cursor: pointer;
+                    font-weight: 500;
+                    &:hover{
+                        text-decoration: underline;
+                        text-underline-offset: .2rem;
+                    }
+                }
+            }
+        }
+        .menuClose{
+            position: absolute;
+            right: 1%;
+            top: 3%;
+            >div{
+                width: 100%;
+                max-width: 25px;
+                cursor: pointer;
+                img{
+                    width: 100%;
+                }
+            }
+        }
+    }
+}
+
+.overlayMenuOpen{
+    visibility: visible;
+    opacity: 1;
+    >:nth-child(1){
+        >:nth-child(1){
+            width: 90%;
+            transform: scale(1);
+            opacity: 100%;
+            transition: 1.5s;
+            transition-delay: 500ms;
+        }
+    }
+    >:nth-child(2){
+        >:nth-child(2){
+            >div{
+                background: transparent;
+                transform: scale(1) translateY(0px);
+                opacity: 100%;
+            }
+            >:nth-child(1){
+                transition-delay: 1s;
+            }
+            >:nth-child(2){
+                transition-delay: 1.1s;
+            }
+            >:nth-child(3){
+                transition-delay: 1.2s;
+            }
+            >:nth-child(4){
+                transition-delay: 1.3s;
+            }
+            >:nth-child(5){
+                transition-delay: 1.4s;
+            }
+            >:nth-child(6){
+                transition-delay: 1.5s;
+            }
+        }
+    }
 }
 
 .content{
@@ -63,6 +189,11 @@ body{
         justify-content: space-between;
         height: 97%;
         width: 98.5%;
+    }
+}
+
+.content{
+    .intContent{
         >:nth-child(1){
             margin: 0 auto;
             display: flex;
@@ -72,13 +203,15 @@ body{
             border-radius: 30px;
             width: 100%;
             max-width: 3000px;
+            transform: translateY(-15px);
+            opacity: 0%;
+            transition: 1s;
             .headerContent{
                 margin: 0 auto;
                 display: flex;
                 flex-flow: row wrap;
                 align-items: center;
                 justify-content: space-between;
-                background: $negro;
                 border-radius: 30px;
                 width: 100%;
                 padding: 5px;
@@ -111,19 +244,13 @@ body{
                     }
                 }
                 >:nth-child(2){
-                    >:nth-child(1){
-                        display: none;
-                        &:hover{
-                            background: $gris;
-                        }
-                    }
-                    >:nth-child(2), >:nth-child(3){
+                    >:nth-child(1), >:nth-child(2){
                         padding: 0;
                         padding: 3px;
                         border-radius: 50%;
                         display: grid;
                         place-content: center;
-                        div{
+                        a{
                             display: flex;
                             place-content: center;
                             width: 100%;
@@ -134,14 +261,20 @@ body{
                             }
                         }
                     }
-                    >:nth-child(4){
+                    >:nth-child(3){
                         background-color: $gris;
                     }
                 }
             }
         }
+        .navBarAnimation{
+            transform: translateY(0px);
+            opacity: 100%;
+            transition: 1s;
+        }
     }
 }
+
 
 @media (max-width: 800px){
     .content{
@@ -161,17 +294,12 @@ body{
                         }
                     }
                     >:nth-child(2){
-                        >:nth-child(1){
-                            display: none;
-                        }
-                        >:nth-child(2), >:nth-child(3){
+                        >:nth-child(1), >:nth-child(2){
                             padding: 3px;
                             div{
                                 max-width: 15px;
                                 padding: 5px;
                             }
-                        }
-                        >:nth-child(4){
                         }
                     }
                 }
@@ -187,28 +315,161 @@ body{
                 .headerContent{
                     justify-content: space-between;
                     >div{
-                        width: 50%;
+                        width: 100%;
                         display: flex;
-                        flex-flow: row wrap;
+                        flex-flow: row nowrap;
                         align-items: center;
                         justify-content: center;
                         >div{
-                            width: 100%;
+                            width: 500%;
                             padding: 8px;
-                            font-size: 14px;
+                            // font-size: 14px;
                         }
                     }
+                    >:nth-child(2){
+                        display: none;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.content{
+    .intContent{
+        main{
+            display: flex;
+            flex-flow: column wrap;
+            gap: 1rem;
+            section{
+                width: 99.8%;
+                border-radius: 25px;
+                margin: 0 auto;
+                max-width: 3000px;
+                backdrop-filter: blur(8px);
+                cursor: pointer;
+                position: relative;
+                background-image: linear-gradient(to right, rgba(7, 35, 80, 0.5), rgba(203, 203, 203, .5));
+                z-index: 1;
+                >:nth-child(1){
+                    margin: 0 auto;
+                    width: 95%;
+                    display: flex;
+                    flex-flow: row wrap;
+                    align-items: center;
+                    justify-content: space-between;
+                    align-items: center;
+                    padding: 15px 0px;
+                    h2{
+                        all: unset;
+                    }
                     >:nth-child(1){
-                        >:nth-child(2), >:nth-child(3), >:nth-child(4){
-                            display: none;
+                        display: flex;
+                        flex-flow: row wrap;
+                        align-items: center;
+                        gap: 1.25rem;
+                        >:nth-child(1){
+                            display: flex;
+                            flex-flow: row wrap;
+                            .circle {
+                                width: 35px;
+                                height: 35px;
+                                border-radius: 50%;
+                                position: relative;
+                                overflow: hidden;
+                              }
+                              .circle::before {
+                                content: "";
+                                position: absolute;
+                                top: -1px;
+                                right: -1px;
+                                bottom: -1px;
+                                width: 50%;
+                                border: 5px solid rgba(255, 255, 255, 0.1);
+                                background: rgb(255, 255, 255, .8);
+                                filter: blur(10px);
+                                z-index: -1;
+                            }
+                            .cr2{
+                                margin-left: -20px;
+                            }
+                        }
+                        >:nth-child(2){
+                            h2{
+                                letter-spacing: .75rem;
+                                font-weight: 600;
+                                font-size: 1.95rem;
+                                color: $casiBlanco;
+                            }
                         }
                     }
                     >:nth-child(2){
                         >:nth-child(1){
-                            display: block;
+                            width: 100%;
+                            max-width: 17.5px;
+                            background: white;
+                            border-radius: 50%;
+                            padding: 2.5px;
+                            display: grid;
+                            place-content: center;
+                            cursor: pointer;
+                            img{
+                                width: 100%;
+                            }
                         }
-                        >:nth-child(2), >:nth-child(3), >:nth-child(4){
-                            display: none;
+
+                    }
+                }
+            }
+            section::before{
+                position: absolute;
+                content: "";
+                top: 0;
+                right: 0;
+                bottom: 0;
+                left: 0;
+                background-image: linear-gradient(to right, rgba(7, 35, 80, .8), rgba(203, 203, 203, .8));
+                border-radius: 20px;
+                backdrop-filter: blur(8px);
+                z-index: -1;
+                transition: opacity 0.5s linear;
+                opacity: 0;
+            }
+            section:hover::before{
+                opacity: .8;
+            }
+        }
+    }
+}
+
+@media(max-width: 800px){
+    .content{
+        .intContent{
+            main{
+                section{
+                    >:nth-child(1){
+                        >:nth-child(1){
+                            >:nth-child(1){
+                                .circle {
+                                    width: 28px;
+                                    height: 28px;
+                                  }
+                                .cr2{
+                                    margin-left: -16px;
+                                }
+                            }
+                            >:nth-child(2){
+                                h2{
+                                    letter-spacing: 0.55rem;
+                                    font-size: 1.45rem;
+                                }
+                            }
+                        }
+                        >:nth-child(2){
+                            >:nth-child(1){
+                                max-width: 17.5px;
+                                padding: 2.5px;
+                            }
                         }
                     }
                 }
@@ -217,3 +478,42 @@ body{
     }
 }
 
+@media(max-width: 500px){
+    .content{
+        .intContent{
+            main{
+                section{
+                    >:nth-child(1){
+                        display: flex;
+                        flex-flow: row nowrap;
+                        >:nth-child(1){
+                            >:nth-child(1){
+                                .circle {
+                                    width: 22.5px;
+                                    height: 22.5px;
+                                  }
+                                .cr2{
+                                    margin-left: -13px;
+                                }
+                            }
+                            >:nth-child(2){
+                                width: 25%;
+                                h2{
+                                    letter-spacing: 0.45rem;
+                                    font-size: 1.25rem;
+
+                                }
+                            }
+                        }
+                        >:nth-child(2){
+                            >:nth-child(1){
+                                max-width: 17.5px;
+                                padding: 2.5px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
